Redo top navbar to fix alignment

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -46,37 +46,40 @@ img.right {
 .header {
   position: fixed;
   top: 0;
-  padding: 0.25em;
+  padding: 0.25em 0.5em;
   width: 100%;
   overflow: hidden;
   background-color: #AAA;
-  align-items: baseline;
   z-index: 1;                 /* keep embeded youtube from overlapping */
+  box-sizing: border-box;
 }
-.header .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+
+.header table {
+    width: 100%;
+    border: 0px;
+    border-spacing: 0;
+}
+
+.header td {
+    vertical-align: middle;
+    padding: 0;
 }
 
 .header .left {
-    display: flex;
+    text-align: left;
 }
 
 .header .right {
     text-align: right;
-    vertical-align: bottom;
-    display: flex;
 }
 
 .header h2 {
-  margin: 0;
-  font-size: 26px;
+    display: inline;
+    font-size: 26px;
 }
 
 #menu {
-    padding: 6px 1em 0 0;
+    margin-right: 1em;
 }
 
 .plain {
@@ -84,8 +87,13 @@ img.right {
     color: black;
 }
 
-#navArrows {
-    padding: 5px 5px 0 5px;
+#navArrows img {
+/*    padding: 5px 0 0 0; */
+    vertical-align: middle;
+}
+
+#navArrows .spacer {
+    margin: 0 5px;
 }
 
 body {
